--- a/index.html
+++ b/index.html
@@ -1,3 +1,215 @@
-<h1>Hello World</h1>
-selaaammmmmm
+<!DOCTYPE html>
+<html>
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Profile - Brand</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
+    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
+</head>
+
+<body id="page-top">
+    <div id="wrapper">
+        <div class="d-flex flex-column" id="content-wrapper">
+            <div id="content">
+                <nav class="navbar navbar-light navbar-expand-md" style="padding-top: 10px;padding-bottom: 10px;margin-bottom: 20px;background: linear-gradient(to right, #00b4db, #0083b0);">
+                    <div class="container-fluid"><a class="navbar-brand" href="#" style="color: rgb(255,255,255);">YTUSepeti</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                        <div
+                            class="collapse navbar-collapse" id="navcol-1">
+                            <ul class="nav navbar-nav">
+                                <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Categories</a></li>
+                                <li class="nav-item" role="presentation"><a class="nav-link" href="#">Products</a></li>
+                                <li class="nav-item" role="presentation"><a class="nav-link" href="#">Others</a></li>
+                            </ul>
+                    </div>
+            </div>
+            </nav>
+            <div class="container-fluid">
+                <h3 class="text-dark mb-4" style="font-size: 24pt;">Category 1</h3>
+                <div class="row mb-3">
+                    <div class="col-lg-8 col-lg-12">
+                        <div class="row mb-3 d-none">
+                            <div class="col">
+                                <div class="card text-white bg-primary shadow">
+                                    <div class="card-body">
+                                        <div class="row mb-2">
+                                            <div class="col">
+                                                <p class="m-0">Peformance</p>
+                                                <p class="m-0"><strong>65.2%</strong></p>
+                                            </div>
+                                            <div class="col-auto"><i class="fas fa-rocket fa-2x"></i></div>
+                                        </div>
+                                        <p class="text-white-50 small m-0"><i class="fas fa-arrow-up"></i>&nbsp;5% since last month</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card text-white bg-success shadow">
+                                    <div class="card-body">
+                                        <div class="row mb-2">
+                                            <div class="col">
+                                                <p class="m-0">Peformance</p>
+                                                <p class="m-0"><strong>65.2%</strong></p>
+                                            </div>
+                                            <div class="col-auto"><i class="fas fa-rocket fa-2x"></i></div>
+                                        </div>
+                                        <p class="text-white-50 small m-0"><i class="fas fa-arrow-up"></i>&nbsp;5% since last month</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <div class="card shadow mb-3">
+                                    <div class="card-header py-3">
+                                        <p class="text-primary m-0 font-weight-bold" style="font-size: 20pt;">Statistical Informations</p>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="row">
+                                            <div class="col col-lg-7 col-sm-12">
+                                                <div class="row">
+                                                    <div class="col">
+                                                        <div><canvas data-bs-chart="{&quot;type&quot;:&quot;bar&quot;,&quot;data&quot;:{&quot;labels&quot;:[&quot;January&quot;,&quot;February&quot;,&quot;March&quot;,&quot;April&quot;,&quot;May&quot;,&quot;June&quot;],&quot;datasets&quot;:[{&quot;label&quot;:&quot;Revenue&quot;,&quot;backgroundColor&quot;:&quot;#4e73df&quot;,&quot;borderColor&quot;:&quot;#4e73df&quot;,&quot;data&quot;:[&quot;4500&quot;,&quot;5300&quot;,&quot;6250&quot;,&quot;7800&quot;,&quot;9800&quot;,&quot;15000&quot;]}]},&quot;options&quot;:{&quot;maintainAspectRatio&quot;:true,&quot;legend&quot;:{&quot;display&quot;:false},&quot;title&quot;:{}}}"></canvas></div>
+                                                    </div>
+                                                </div>
+                                                <div class="row mb-sm-3">
+                                                    <div class="col text-center"><span class="text-center">Hourly Average Gain</span></div>
+                                                </div>
+                                            </div>
+                                            <div class="col col-lg-5 col-sm-12">
+                                                <div class="row text-center">
+                                                    <div class="col" style="background-color: #818181;padding: 4pt;"><span style="font-size: 16pt;color: rgb(255,255,255);">Standart Deviation</span></div>
+                                                </div>
+                                                <div class="row mb-3">
+                                                    <div class="col">
+                                                        <div class="text-center" style="padding: 10px;"><span style="font-size: 16pt;">172.58</span></div>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col text-center" style="background-color: #818181;padding: 4pt;"><span class="text-center" style="font-size: 16pt;color: rgb(255,255,255);">Most Expensive Product</span></div>
+                                                </div>
+                                                <div class="row mb-3">
+                                                    <div class="col">
+                                                        <div class="text-center" style="padding: 10px;"><span style="font-size: 16pt;">Product 1</span></div>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col text-center" style="background-color: #818181;padding: 4pt;"><span class="text-center" style="font-size: 16pt;color: rgb(255,255,255);">Cheapest &nbsp;Product</span></div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col">
+                                                        <div class="text-center" style="padding: 10px;"><span style="font-size: 16pt;">Product 2</span></div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card shadow">
+                                    <div class="card-header py-3" style="font-size: 16pt !important;">
+                                        <div class="row">
+                                            <div class="col">
+                                                <p class="text-primary m-0 font-weight-bold">Product List</p>
+                                            </div>
+                                            <div class="col">
+                                                <form class="d-none d-sm-inline-block mr-auto float-right">
+                                                    <div class="input-group"><input class="bg-light form-control border-0 small" type="text" placeholder="Search Product...">
+                                                        <div class="input-group-append"><button class="btn btn-primary py-0" type="button" style="background-color: rgb(129,129,129); border:none;"><i class="fas fa-search"></i></button></div>
+                                                    </div>
+                                                </form>
+                                            </div>
+                                        </div>
+                                        <div class="table-responsive table mt-2" id="dataTable" role="grid" aria-describedby="dataTable_info">
+                                            <table class="table dataTable my-0" id="dataTable">
+                                                <thead>
+                                                    <tr>
+                                                        <th>Name</th>
+                                                        <th>Brand</th>
+                                                        <th>Total View</th>
+                                                        <th>Selling Rate</th>
+                                                        <th>Price</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <td>Product 1</td>
+                                                        <td>Brand 1</td>
+                                                        <td>300</td>
+                                                        <td>3.14</td>
+                                                        <td>$100</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Product 2</td>
+                                                        <td>Brand 2<br></td>
+                                                        <td>400</td>
+                                                        <td>3.14<br></td>
+                                                        <td>$200</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Product 3</td>
+                                                        <td>Brand 3<br></td>
+                                                        <td>500</td>
+                                                        <td>3.14<br></td>
+                                                        <td>$300</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Product 4</td>
+                                                        <td>Brand 4<br></td>
+                                                        <td>600</td>
+                                                        <td>3.14<br></td>
+                                                        <td>$400</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Product 5</td>
+                                                        <td>Brand 5<br></td>
+                                                        <td>700</td>
+                                                        <td>3.14<br></td>
+                                                        <td>$500</td>
+                                                    </tr>
+                                                </tbody>
+                                                <tfoot>
+                                                    <tr></tr>
+                                                </tfoot>
+                                            </table>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6 align-self-center">
+                                                <p id="dataTable_info" class="dataTables_info" role="status" aria-live="polite">Showing 1 to 5 of 30</p>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <nav class="d-lg-flex justify-content-lg-end dataTables_paginate paging_simple_numbers">
+                                                    <ul class="pagination">
+                                                        <li class="page-item disabled"><a class="page-link" href="#" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
+                                                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                                                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                                        <li class="page-item"><a class="page-link" href="#" aria-label="Next"><span aria-hidden="true">»</span></a></li>
+                                                    </ul>
+                                                </nav>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer class="bg-white sticky-footer">
+            <div class="container my-auto">
+                <div class="text-center my-auto copyright"><span style="font-size: 16pt;">Developed By Ömer Aytekin And Caner Kaya</span></div>
+            </div>
+        </footer>
+    </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a></div>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/chart.min.js"></script>
+    <script src="assets/js/bs-charts.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
+    <script src="assets/js/theme.js"></script>
+</body>
+
+</html>
