--- a/functions.html
+++ b/functions.html
@@ -116,7 +116,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
         <script src="assets/js/theme.js"></script>
         <script>
-        host = "https://ec2-35-175-124-117.compute-1.amazonaws.com:2626/";
+        host = "http://ec2-35-175-124-117.compute-1.amazonaws.com:2626/";
 
         $.urlParam = function (name) {
             var results = new RegExp('[\?&]' + name + '=([^&#]*)').exec(window.location.href);
