--- a/about.html
+++ b/about.html
@@ -34,13 +34,20 @@
             color: #555 !important;
         }
         
+        .navbar {
+            background: rgb(78,115,223);
+            background: -moz-linear-gradient(159deg, rgba(78,115,223,1) 0%, rgba(99,126,207,1) 100%);
+            background: -webkit-linear-gradient(159deg, rgba(78,115,223,1) 0%, rgba(99,126,207,1) 100%);
+            background: linear-gradient(159deg, rgba(78,115,223,1) 0%, rgba(99,126,207,1) 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#4e73df",endColorstr="#637ecf",GradientType=1);
+        }
         </style>
     </head>
     <body id="page-top">
         <div id="wrapper">
             <div class="d-flex flex-column" id="content-wrapper">
                 <div id="content">
-                    <nav class="navbar navbar-light navbar-expand-md" style="padding-top: 10px;padding-bottom: 10px;margin-bottom: 20px;background: linear-gradient(to right, #4e73df, #637ecf);">
+                    <nav class="navbar navbar-light navbar-expand-md" style="padding-top: 10px;padding-bottom: 10px;margin-bottom: 20px;">
                         <div class="container-fluid">
                             <a class="navbar-brand" href="brands.html" style="color: #FFFF00;">
                             <img src="assets/img/hadoop2.png" class="mr-2"  height="50" alt="">YTUExpress</a>
