--- a/functions.html
+++ b/functions.html
@@ -35,6 +35,13 @@
             color: #555 !important;
         }
         
+        .navbar {
+            background: rgb(78,115,223);
+            background: -moz-linear-gradient(159deg, rgba(78,115,223,1) 0%, rgba(99,126,207,1) 100%);
+            background: -webkit-linear-gradient(159deg, rgba(78,115,223,1) 0%, rgba(99,126,207,1) 100%);
+            background: linear-gradient(159deg, rgba(78,115,223,1) 0%, rgba(99,126,207,1) 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#4e73df",endColorstr="#637ecf",GradientType=1);
+        }
         </style>
     </head>
     <body id="page-top">
@@ -42,7 +49,7 @@
             <div class="wrapper"></div>
             <div class="d-flex flex-column" id="content-wrapper">
                 <div id="content">
-                    <nav class="navbar navbar-light navbar-expand-md" style="padding-top: 10px;padding-bottom: 10px;margin-bottom: 20px;background: linear-gradient(to right, #4e73df, #637ecf);">
+                    <nav class="navbar navbar-light navbar-expand-md" style="padding-top: 10px;padding-bottom: 10px;margin-bottom: 20px;">
                         <div class="container-fluid">
                             <a class="navbar-brand" href="brands.html" style="color: #FFFF00;">
                             <img src="assets/img/hadoop2.png" class="mr-2"  height="50" alt="">YTUExpress</a>
@@ -116,7 +123,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
         <script src="assets/js/theme.js"></script>
         <script>
-        host = "https://ec2-35-175-124-117.compute-1.amazonaws.com:2626/";
+        host = "http://ec2-35-175-124-117.compute-1.amazonaws.com:2626/";
 
         $.urlParam = function (name) {
             var results = new RegExp('[\?&]' + name + '=([^&#]*)').exec(window.location.href);
