some design improvements

--- a/brands.html
+++ b/brands.html
@@ -214,14 +214,14 @@
                     <div class="modal-body">
                     </div>
                     <div class="modal-footer">
-                        <a
+                        <button
                             type="button"
-                            href="brands.html"
+                            onclick="window.location.href='brands.html'"
                             style="color: #fff;"
-                            class="btn btn-info"
-                        >Refresh Page
-                            <i class="fa fa-redo-alt"></i>
-                        </a>
+                            class="btn btn-success"
+                        >Continue
+                            <i class="fas fa-arrow-right"></i>
+                        </button>
                     </div>
                 </div>
             </div>
