--- a/brand.html
+++ b/brand.html
@@ -333,16 +333,14 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <a
+                        <button
                             type="button"
-                            href="#"
+                            onclick="window.location.href='brand.html'"
                             style="color: #fff;"
                             class="btn btn-success"
-                            id="st-continue"
-                        >
-                            Continue
+                        >Continue
                             <i class="fas fa-arrow-right"></i>
-                        </a>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -458,10 +456,10 @@
                             }
                             $(".modal").modal('show');
                             $(".modal-body").html(msg);
-                            $(".modal-footer a").html('Refresh Page \
+                            $(".modal-footer button").html('Refresh Page \
                             <i class="fas fa-redo-alt"></i>');
-                            $(".modal-footer a").removeClass('btn-success').addClass('btn-info');
-                            $(".modal-footer a").attr('href',"");
+                            $(".modal-footer button").removeClass('btn-success').addClass('btn-info');
+                            $(".modal-footer button").attr('onclick',"window.location.href='index.html'");
                             $("#myModalLabel").html("Error");
                             $(".modal-footer").removeAttr('style');
                             $("#loadingScreen").attr("style", "display:none");
