--- a/functions.html
+++ b/functions.html
@@ -105,7 +105,7 @@
                     <div class="container my-auto">
                         <div class="text-center my-auto copyright">
                             <span style="font-size: 16pt;">
-                                Developed By Ömer Aytekin
+                                Designed And Developed By Ömer Aytekin
                             And Caner Kaya
                             </span>
                         </div>
