--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <footer class="bg-white sticky-footer" style="position: absolute;bottom: 0;width: 100%;/*background-color: #333;*//*color: #fff;*/">
                     <div class="container my-auto">
                         <div class="text-center my-auto copyright">
-                            <span style="font-size: 16pt;">Developed By Ömer Aytekin And Caner Kaya</span>
+                            <span style="font-size: 16pt;">Designed And Developed By Ömer Aytekin And Caner Kaya</span>
                         </div>
                     </div>
                 </footer>
