Calc avg button activated

--- a/brand.html
+++ b/brand.html
@@ -709,6 +709,9 @@
                 if($(this).attr("id") == "btnStd"){
                     script = "stdev";
                 } 
+                if($(this).attr("id") == "btnAvg"){
+                    script = "average";
+                } 
                 if($(this).attr("id") == "btnMedian"){
                     script = "median";
                 } 
