--- a/brand.html
+++ b/brand.html
@@ -456,6 +456,7 @@
                                 });  
                             }
             
+                            $("#footy").removeAttr("hidden");
                             $("#loadingScreen").attr("style", "display:none");
                         },
                         error: function(jqXHR, exception){
