--- a/brands.html
+++ b/brands.html
@@ -356,6 +356,8 @@
                             });
                         });  
                     }
+
+                    $("#footy").removeAttr("hidden");
                     $("#loadingScreen").attr("style", "display:none");
                     $("#dataTable thead").removeAttr("hidden");
                     console.log("param")
