--- a/postgresql/index.html
+++ b/postgresql/index.html
@@ -7517,7 +7517,7 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1>Notes From PostgreSQL Documentation</h1>
+<h1>Notes From PostgreSQL Documentation (V17)</h1>
 </div>
 </div>
 </div>
@@ -7528,7 +7528,11 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>Main repository for ipynb file is <a href="https://github.com/omeraytekinn/postgresql-notes">https://github.com/omeraytekinn/postgresql-notes</a>. You can download notebook file from here.</p>
+<ul>
+<li>The main repository for the notebook file is available at <a href="https://github.com/omeraytekinn/postgresql-notes">https://github.com/omeraytekinn/postgresql-notes</a>.</li>
+<li>You can download the notebook file from this repository and run the queries locally.</li>
+<li>For more details you can check <a href="https://www.postgresql.org/docs/17/index.html">PostgreSQL Documentation</a>.</li>
+</ul>
 </div>
 </div>
 </div>
@@ -7572,8 +7576,6 @@ a.anchor-link {
 </ul>
 </li>
 </ul>
-<p>Bu formatta numaralar da duruyor, ancak sırasız liste halinde düzenlenmiş oldu.</p>
-<p>Bu şekilde bir düzenleme yapabilirsiniz!</p>
 </div>
 </div>
 </div>
@@ -7631,7 +7633,7 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p><b>This steps will be executed every start/restart of kernel or notebook</b></p>
+<p><strong>This steps must be executed every start/restart of kernel or notebook</strong></p>
 </div>
 </div>
 </div>
@@ -7775,17 +7777,6 @@ Usage: &lt;db_vendor&gt;://[username:password]@&lt;serverip&gt;/&lt;dbname&gt;</
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h5 id="a.-Creating-Table">a. Creating Table<a class="anchor-link" href="#a.-Creating-Table">¶</a></h5>
-</div>
-</div>
-</div>
-</div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=498d56a6-1e9c-45e9-b556-2747439fe12f">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>For details check reference <a href="https://www.postgresql.org/docs/current/sql-createtable.html">https://www.postgresql.org/docs/current/sql-createtable.html</a></p>
 </div>
 </div>
 </div>
